# OZ_Study

./: .gitignore  readme.md  text.txt
Programmers/: readme.md
Programmers/Level_0/: 240220_문자열안에 문자열.py  240305_옹알이(1).py
Programmers/Level_1/: 240126_명예의 전당(1).py  240130_달리기 경주.py  240131_최소직사각형.py  240201_성격유형검사하기.py  240202_둘만의암호.py  240215_하샤드수.py  240219_콜라츠 추축.py  240221_제일 작은 수 제거하기.py  240222_내적.py  240223_같은 숫자는 싫어.py
Programmers/Level_2/: 240128_행렬의 곱셈.py  240206_최댓값과 최솟값.py  240207_JadenCase 문자열 만들기.py
Programmers/Level_4/: 240212_도둑질.py
Study/: readme.md
Study/AWS/: AWS4일차.md  클라우드, AWS.md
Study/AdminPage_Project/: index.html  readme.md
Study/Crawling/: 240126_naver_1.py  240126_naver_2.py  240126_naver_3.py  240129_melon.py  240129_melon_miniProject.py  240129_naver_4.py  240129_naver_5.py  240129_naver_6.py  240129_selenium.py  240130_Kream.py  240130_selenium_3.py  240130_selenium_4.py  m.melon.py  readme.md
Study/Django-DataAnalysis/: datanalysis_1_data_analysis_Matplotlib.py  datanalysis_1_data_analysis_numpy.py  datanalysis_1_data_analysis_pandas.py  datanalysis_1_data_analysis_pandas_ex.py
Study/Django-Machine-Learning/: machine_learning.py  test.py  타이타닉.ipynb  타이타닉.py
Study/Django-Test/: db.sqlite3  pyproject.toml
Study/Django-Test/conifg/: asgi.py  settings.py  urls.py  wsgi.py
Study/Django-backend/: db.sqlite3
Study/HTML/: 참고.html
Study/JS/: test.html  test.js
Study/OS/: 01.py  02.py  03.py  04.py  05.py  06.py  07.py  08.py  09.py  10.py  11.py  12.py  13.py  14.py  15.py  16.py  17.py  18.js  19.py  20.py  21.py  (+18 more)
(+214 files in other folders)
